# rust-cli-api

./: Cargo.toml  README.md
src/: handler.rs  main.rs
src/handlers/: mod.rs  shortener.rs  state.rs
